--- a/pluginPage.html
+++ b/pluginPage.html
@@ -1,281 +1,88 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-	<style>
-		body {
-			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-			color: rgb(238, 238, 238);
-			background-color: rgb(34, 40, 49);
-			font-size: 1rem;
-			font-weight: 400;
-    	line-height: 1.5;
-		}
-		.plugin-body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: rgb(238, 238, 238);
-      background-color: rgb(34, 40, 49);
-      font-size: 1rem;
-      font-weight: 400;
-      line-height: 1.5;
-      padding-bottom: 2em;
-      background-image: url("https://remotefalcon.com/brick-wall-background-with-juke.jpg");
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-    }
-    .card {
-      background-color: rgba(59, 69, 84, 0.7);
-      border-radius: 0.5em;
-      margin: 1em 1em 1em 1em;
-      padding: 1em 1em 1em 1em;
-    }
-    .card-body {
-      background-color: rgba(59, 69, 84, 0);
-    }
-		.card-subtitle {
-			font-size: .9rem;
-		}
-		.setting-item {
-			padding-bottom: 2em;
-		}
-		.input-group {
-			padding-top: .5em;
-		}
-		.btn-primary {
-			background-color: #D65A31;
-			border-color: #D65A31;
-		}
-		.btn-primary:hover {
-			background-color: #D65A31;
-			border-color: #D65A31;
-		}
-		.btn-primary:focus {
-			background-color: #D65A31;
-			border-color: #D65A31;
-		}
-		.btn-danger {
-			background-color: #A72525;
-			border-color: #A72525;
-		}
-		.btn-danger:hover {
-			background-color: #A72525;
-			border-color: #A72525;
-		}
-		.btn-danger:focus {
-			background-color: #A72525;
-			border-color: #A72525;
-		}
-    .btn-warning {
-      background-color: #E0CA00;
-      border-color: #E0CA00;
-    }
-    .btn-warning:hover {
-      background-color: #E0CA00;
-      border-color: #E0CA00;
-    }
-    .btn-warning:focus {
-      background-color: #E0CA00;
-      border-color: #E0CA00;
-    }
-		.hvr-underline-from-center {
-			display: inline-block;
-			vertical-align: middle;
-			-webkit-transform: perspective(1px) translateZ(0);
-			transform: perspective(1px) translateZ(0);
-			box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-			position: relative;
-			overflow: hidden;
-		}
-		.hvr-underline-from-center:before {
-			content: "";
-			position: absolute;
-			z-index: -1;
-			left: 51%;
-			right: 51%;
-			bottom: 0;
-			background: #FFF;
-			height: 4px;
-			-webkit-transition-property: left, right;
-			transition-property: left, right;
-			-webkit-transition-duration: 0.3s;
-			transition-duration: 0.3s;
-			-webkit-transition-timing-function: ease-out;
-			transition-timing-function: ease-out;
-		}
-		.hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
-			left: 0;
-			right: 0;
-		}
-		#update {
-			color: #A72525;
-		}
-		#remoteFalconRunning {
-			color: #60F779;
-		}
-		#remoteFalconStopped {
-			color: #A72525;
-		}
-		#env {
-			color: #A72525;
-		}
-		#warning {
-			font-weight: bold;
-			color: #A72525;
-		}
-		#restartNotice {
-			font-weight: bold;
-			color: #D65A31;
-			visibility: visible;
-		}
-	</style>
-<body>
-	<div class="container-fluid plugin-body">
-		<div class="container" style="padding-top: 2em;">
-			<div class="justify-content-md-center row" style="padding-bottom: 1em;">
-				<div class="col-md-auto">
-					<h1>Remote Falcon Plugin v6.0.0</h1>
-				</div>
-			</div>
-			<div class="justify-content-md-center row" style="padding-bottom: 1em;">
-				<div class="col-md-auto">
-						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=FFKWA2CFP6JC6&currency_code=USD&source=url" target="_blank" rel="noopener noreferrer"> <img style="margin-left: 1em;" alt="RF_Donate" src="https://remotefalcon.com/support-button-v2.png"></a>
-				</div>
-			</div>
-			<div class="justify-content-md-center row" style="padding-bottom: 1em;">
-				<div class="col-md-auto">
-					<h4 id="remoteFalconRunning">Remote Falcon is currently running</h4>
-				</div>
-			</div>
-			<div id="update" class="justify-content-md-center row" style="padding-bottom: 1em;">
-				<div class="col-md-auto">
-					<h4>An update is available!</h4>
-				</div>
-			</div>
-			<div class="justify-content-md-center row">
-				<div class="col-md-auto">
-					<h4 id="env">TEST</h4>
-				</div>
-			</div>
-		</div>
-		<div class="container">
-			<div class="card">
-				<div class="card-body">
-					<!-- Remote Token -->
-					<div class="justify-content-md-center row setting-item">
-						<div class="col-md-6">
-							<div class="card-title h5">
-								Remote Token <span id="restartNotice"> *</span>
-							</div>
-							<div class="mb-2 text-muted card-subtitle h6">
-								Your Remote Token can be found on the Remote Falcon Control Panel
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="input-group">
-								<input type="text" class="form-control" placeholder="Remote Token">
-								<span class="input-group-btn">
-									<button class="btn mr-md-3 hvr-underline-from-center btn-primary" type="submit">Update</button>
-								</span>
-							</div>
-						</div>
-					</div>
-					<!-- Remote Playlist -->
-					<div class="justify-content-md-center row setting-item">
-						<div class="col-md-6">
-							<div class="card-title h5">
-								Remote Playlist <span id="restartNotice"> *</span>
-							</div>
-							<div class="mb-2 text-muted card-subtitle h6">
-								This is the playlist that contains all the sequences to be controlled by your viewers
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="input-group">
-								<select class="form-select" id="remotePlaylist">
-									<option selected></option>
-									<option value="1">One</option>
-									<option value="2">Two</option>
-									<option value="3">Three</option>
-								</select>
-								<span class="input-group-btn">
-									<button class="btn mr-md-3 hvr-underline-from-center btn-primary" type="button">Update</button>
-								</span>
-							</div>
-						</div>
-					</div>
-					<!-- Current Remote Playlist -->
-					<div class="justify-content-md-center row setting-item">
-						<div class="col-md-6">
-							<div class="card-title h5">
-								Current Remote Playlist
-							</div>
-							<div class="mb-2 text-muted card-subtitle h6">
-								This is the current playlist synced with Remote Falcon
-							</div>
-						</div>
-						<div class="col-md-6">
-							<h5>Synced Playlist</h5>
-						</div>
-					</div>
-					<!-- Interrupt Schedule -->
-					<div class="justify-content-md-center row setting-item">
-						<div class="col-md-6">
-							<div class="card-title h5">
-								Interrupt Schedule <span id="restartNotice"> *</span>
-							</div>
-							<div class="mb-2 text-muted card-subtitle h6">
-								Determines if a request or vote will interrupt the normal schedule
-							</div>
-						</div>
-						<div class="col-md-6">
-							<button class="btn mr-md-3 hvr-underline-from-center btn-primary" type="button">
-								Yes
-							</button>
-							<button class="btn mr-md-3 hvr-underline-from-center btn-secondary" type="button">
-								No
-							</button>
-						</div>
-					</div>
-					<!-- Restart Remote Falcon -->
-          <div class="justify-content-md-center row setting-item">
-            <div class="col-md-6">
-              <div class="card-title h5">
-                Restart Remote Falcon
-              </div>
-              <div class="mb-2 text-muted card-subtitle h6">
-                This will restart the Remote Falcon plugin
-              </div>
-            </div>
-            <div class="col-md-6">
-              <button class="btn mr-md-3 hvr-underline-from-center btn-warning" type="button">
-                Restart Remote Falcon
-              </button>
-            </div>
+  <head>
+    <link rel="stylesheet" href="css/index.css" />
+    <script src="js/index.js"></script>
+  </head>
+
+  <body>
+    <div>
+      <div class="justify-content-md-center row">
+        <div class="col-md-auto">
+          <h1>Remote Falcon Plugin <span id="pluginVersion"></span></h1>
+        </div>
+      </div>
+      <div class="justify-content-md-center row">
+        <div class="col-md-auto">
+          <h3 id="remoteFalconRunning">Remote Falcon is currently running</h3>
+        </div>
+      </div>
+      <div style="display:block">
+        <div id="update" class="justify-content-md-center row">
+          <div class="col-md-auto">
+            <h3 style="font-weight: bold;">An update is available!</h3>
           </div>
-					<!-- Stop Remote Falcon -->
-					<div class="justify-content-md-center row setting-item">
-						<div class="col-md-6">
-							<div class="card-title h5">
-								Stop Remote Falcon
-							</div>
-							<div class="mb-2 text-muted card-subtitle h6">
-								<span id="warning">WARNING! </span>This will immediately stop the Remote Falcon
-								plugin and no requests/votes will be fetched!
-							</div>
-						</div>
-						<div class="col-md-6">
-							<button class="btn mr-md-3 hvr-underline-from-center btn-danger" type="button">
-								Stop Remote Falcon
-							</button>
-						</div>
-					</div>
-          <span id="restartNotice">* Requires Remote Falcon Restart</span>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
-</body>
+        </div>
+      </div>
+      <div class="justify-content-md-center row">
+        <div class="col-md-auto">
+          <h4 id="env">TEST</h4>
+        </div>
+      </div>
+      <div class="justify-content-md-center row" style="padding-top: 1em">
+        <div class="col-md-auto">
+          <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=FFKWA2CFP6JC6&currency_code=USD&source=url" target="_blank" rel="noopener noreferrer">
+            <img style="margin-left: 1em;" alt="RF_Donate" src="https://remotefalcon.com/support-button-v2.png">
+          </a>
+        </div>
+      </div>
+      <hr />
+      <!-- Remote Token -->
+      <div class="justify-content-md-center row setting-item">
+        <div class="col-md-6">
+          <div class="card-title">
+            <h4>Remote Token <span id="restartNotice"> *</span></h4>
+          </div>
+          <div class="mb-2 text-muted card-subtitle h6">
+            Your Remote Token can be found on the Remote Falcon Control Panel
+          </div>
+        </div>
+        <div class="col-md-6">
+          <input type="text" id="remoteToken" style="width: 75%" onblur="saveRemoteToken()">
+        </div>
+      </div>
+      <!-- Remote Playlist -->
+      <div class="justify-content-md-center row setting-item">
+        <div class="col-md-6">
+          <div class="card-title">
+            <h4>Remote Playlist <span id="restartNotice"> *</span></h4>
+          </div>
+          <div class="mb-2 text-muted card-subtitle h6">
+            This is the playlist that contains all the sequences to be controlled by your viewers
+          </div>
+        </div>
+        <div class="col-md-6">
+          <select id="remotePlaylist" style="width: 75%" onchange="saveRemotePlaylist()">
+            <option value="RF">RF</option>
+            <option value="Show">Show</option>
+            <option value="Another Show">Another Show</option>
+          </select>
+        </div>
+      </div>
+      <!-- Request Fetch Time -->
+      <div class="justify-content-md-center row setting-item">
+        <div class="col-md-6">
+          <div class="card-title">
+            <h4>Request Fetch Time <span id="restartNotice"> *</span></h4>
+          </div>
+          <div class="mb-2 text-muted card-subtitle h6">
+            This sets when the plugin checks for the next request/vote. </br>
+            Recommended is 3 seconds but must be between 1 and 5 seconds.
+          </div>
+        </div>
+        <div class="col-md-6">
+          <input type="number" id="requestFetchTime" style="width: 25%; margin-top: 1em;" onblur="saveRequestFetchTime()">
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
