Center Header Elements

--- a/remote_falcon_ui.html
+++ b/remote_falcon_ui.html
@@ -26,19 +26,19 @@
 
   <div class="plugin-body">
     <div class="card">
-      <div class="justify-content-md-center row" style="padding-bottom: 1em;">
+      <div class="justify-content-md-center row" style="padding-bottom: 1em; justify-content: center;">
         <div class="col-md-auto">
           <h1>Remote Falcon Plugin v<span id="pluginVersion"></span></h1>
         </div>
       </div>
-      <div class="justify-content-md-center row" style="padding-bottom: 2em;">
+      <div class="justify-content-md-center row" style="padding-bottom: 2em; justify-content: center;">
         <div class="col-md-auto">
           <a class="support-button" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=FFKWA2CFP6JC6&currency_code=USD&source=url" target="_blank" rel="noopener noreferrer">
             Support Remote Falcon
           </a>
         </div>
       </div>
-      <div class="justify-content-md-center row" style="padding-bottom: 1em;">
+      <div class="justify-content-md-center row" style="padding-bottom: 1em; justify-content: center;">
         <div class="col-md-auto">
           <span id="remoteFalconStatus"></span>
         </div>
@@ -119,7 +119,7 @@
         </div>
       </div>
       <hr />
-      <div class="justify-content-md-center row" style="padding-bottom: 2em; padding-top: 2em;">
+      <div class="justify-content-md-center row" style="padding-bottom: 2em; padding-top: 2em; justify-content: center;">
         <div class="col-md-auto">
           <h4 class="h5 restart-notice">Advanced Settings</h4>
         </div>
