--- a/remote_falcon_ui.html
+++ b/remote_falcon_ui.html
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div>
-        <div class="justify-content-md-center row">
+        <div class="justify-content-md-center row" style="justify-content: center;"">
           <div class="col-md-auto">
             <span id="updatesAvailable"></span>
           </div>
