Add sync button back and save remote playlist as a trimmed string until FPP API is fixed.

--- a/remote_falcon_ui.html
+++ b/remote_falcon_ui.html
@@ -81,6 +81,7 @@
         <div class="col-md-6">
           <div class="input-group">
             <select class="form-control" id="remotePlaylistSelect" name="remotePlaylistSelect"></select>
+            <button id="syncRemotePlaylistButton" class="buttons btn-outline-success btn-rounded button-margin" type="button">Sync with RF</button>
           </div>
         </div>
       </div>
