Remove Check Plugin button and need for trimmed playlist.

--- a/remote_falcon_ui.html
+++ b/remote_falcon_ui.html
@@ -64,7 +64,7 @@
         </div>
         <div class="col-md-6">
           <div class="input-group">
-            <input type="text" class="form-control" name="remoteTokenInput" id="remoteTokenInput" placeholder="Remote Token" value="">
+            <input type="password" class="form-control" name="remoteTokenInput" id="remoteTokenInput" placeholder="Remote Token" value="">
           </div>
         </div>
       </div>
@@ -106,13 +106,10 @@
             Check Plugin
           </div>
           <div class="mb-2 text-muted card-subtitle">
-            This will run a check on the plugin configuration and report any issues. Results will display below.
+            This will run a check on the plugin configuration and automatically report any issues.
           </div>
         </div>
         <div class="col-md-6">
-          <div class="input-group">
-            <button id="checkPluginButton" class="buttons btn-outline-success btn-rounded" type="button">Check Plugin</button>
-          </div>
           <div id="checkPluginResults">
             
           </div>
