Add custom Plugins API Path
Added ability to change the plugins API path for testing.

--- a/remote_falcon_ui.html
+++ b/remote_falcon_ui.html
@@ -210,7 +210,32 @@
           </div>
         </div>
       </div>
+      <hr />
+      <div class="justify-content-md-center row" style="padding-bottom: 2em; padding-top: 2em; justify-content: center;">
+        <div class="col-md-auto">
+          <h4 class="h5 restart-notice">Developer Settings</h4>
+          <p>Probably best to just leave these alone...</p>
+        </div>
+      </div>
+      <!-- Remote Falcon Host -->
+      <div class="justify-content-md-center row setting-item">
+        <div class="col-md-6">
+          <div class="card-title h6">
+            Plugins API Path
+          </div>
+          <div class="mb-2 text-muted card-subtitle">
+            This controls which API is used by the plugin <br />
+            <span class="warning">WARNING!</span> <br />
+            This should always be <b>https://remotefalcon.com/remotefalcon/api</b>. <br />
+            Don't change this unless you know what you're doing and/or want to break things.
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="input-group">
+            <input type="text" class="form-control" name="pluginsApiPathInput" id="pluginsApiPathInput">
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
 </body>
 </html>
