--- a/remote_falcon_ui.html
+++ b/remote_falcon_ui.html
@@ -31,13 +31,13 @@
           <h1>Remote Falcon Plugin v<span id="pluginVersion"></span></h1>
         </div>
       </div>
-      <div class="justify-content-md-center row" style="padding-bottom: 2em; justify-content: center;">
-        <div class="col-md-auto">
-          <a class="support-button" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=FFKWA2CFP6JC6&currency_code=USD&source=url" target="_blank" rel="noopener noreferrer">
-            Support Remote Falcon
-          </a>
-        </div>
-      </div>
+<!--      <div class="justify-content-md-center row" style="padding-bottom: 2em; justify-content: center;">-->
+<!--        <div class="col-md-auto">-->
+<!--          <a class="support-button" href="https://www.patreon.com/RemoteFalcon" target="_blank" rel="noopener noreferrer">-->
+<!--            Support Remote Falcon-->
+<!--          </a>-->
+<!--        </div>-->
+<!--      </div>-->
       <div class="justify-content-md-center row" style="padding-bottom: 1em; justify-content: center;">
         <div class="col-md-auto">
           <span id="remoteFalconStatus"></span>
@@ -56,10 +56,10 @@
       <div class="justify-content-md-center row setting-item">
         <div class="col-md-6">
           <div class="card-title h6">
-            Remote Token
+            Show Token
           </div>
           <div class="mb-2 text-muted card-subtitle">
-            Your Remote Token, which can be found on the Remote Falcon Control Panel under Account.
+            Your Show Token, which can be found on the Remote Falcon Control Panel under Account.
           </div>
         </div>
         <div class="col-md-6">
