Add option for verbose logging

--- a/remote_falcon_ui.html
+++ b/remote_falcon_ui.html
@@ -236,6 +236,22 @@
           </div>
         </div>
       </div>
+      <!-- Verbose Logging -->
+      <div class="justify-content-md-center row setting-item">
+        <div class="col-md-6">
+          <div class="card-title h6">
+            Verbose Logging
+          </div>
+          <div class="mb-2 text-muted card-subtitle">
+            Show additional logging for debugging purposes.
+            <span class="warning">WARNING!</span> <br />
+            This could result in large log files!
+          </div>
+        </div>
+        <div class="col-md-6">
+          <input type="checkbox" class="form-control" name="verboseLoggingCheckbox" id="verboseLoggingCheckbox">
+        </div>
+      </div>
     </div>
   </div>
 </body>
