Update API path

--- a/remote_falcon_ui.html
+++ b/remote_falcon_ui.html
@@ -226,7 +226,7 @@
           <div class="mb-2 text-muted card-subtitle">
             This controls which API is used by the plugin <br />
             <span class="warning">WARNING!</span> <br />
-            This should always be <b>https://remotefalcon.com/remotefalcon/api</b>. <br />
+            This should always be <b>https://remotefalcon.com/remote-falcon-plugins-api</b>. <br />
             Don't change this unless you know what you're doing and/or want to break things.
           </div>
         </div>
